<resources>
    <!-- App name. Also used for SharedPreferences -->
    <string name="app_name">ClimbingMuse</string>

    <!-- Tab titles -->
    <string name="title_camera">Camera</string>
    <string name="title_file_explorer">Explore local files</string>
    <string name="title_settings">Settings</string>
    <string name="title_camera_settings">Camera</string>>
    <string name="title_computer_vision_settings">Computer\nVision</string>
    <string name="title_mediapipe_settings">MediaPipe</string>

    <!-- SharedPreferences IDs. Use string@"app_name" for the SharedPreferences ID -->
    <string name="camera_permission_denied">Manifest.CAMERA permission</string>

    <string name="sp_camera_cameraSelection">Camera_cameraSelection</string>
    <string name="sp_camera_cvActivated">Camera_cvActivated</string>
    <string name="sp_camera_cameraAction">Camera_cameraAction</string>
    <string name="sp_camera_chipVisibility">Camera_chipVisibility</string>

    <string name="sp_camera_recordChipVisibility">Camera_recordChipVisibility</string>
    <string name="sp_camera_cvChipVisibility">Camera_cvChipVisibility</string>
    <string name="sp_camera_showChipsChipVisibility">Camera_showChipsChipVisibility</string>

    <string name="sp_cv_showAngles">CV_showAngles</string>
    <string name="sp_cv_showCogTrail">CV_showCogTrail</string>
    <string name="sp_cv_showCogMarker">CV_showCogMarker</string>
    <string name="sp_cv_showBalanceMarker">CV_showBalanceMarker</string>
    <string name="sp_cv_showJoints">CV_showJoints</string>
    <string name="sp_cv_showMusclesMarker">CV_showMusclesMarker</string>
    <string name="sp_cv_showMuscleEngagement">CV_showMuscleEngagement</string>

    <string name="sp_mediapipe_model">MediaPipe_model</string>
    <string name="sp_mediapipe_detection_threshold">MediaPipe_detectionThreshold</string>
    <string name="sp_mediapipe_presence_threshold">MediaPipe_presenceThreshold</string>
    <string name="sp_mediapipe_trackable_threshold">MediaPipe_trackableThreshold</string>
    <string name="sp_mediapipe_delegate">MediaPipe_delegate</string>


    <!-- Snackbar content -->
    <string name="permission_denied">Permission denied</string>
    <string name="permission_granted">Permission granted</string>
    <string name="recording_started">Recording video</string>
    <string name="recording_finished">Video saved. File name: %1$s</string>
    <string name="enable_cv">Enabling analysis</string>
    <!-- Button text -->
    <string name="button_give_permission">Give permission</string>
    <string name="button_refuse_permission">Refuse to give permission</string>
    <string name="button_reset_params">Reset parameters to default</string>

    <!-- =============== -->
    <!-- CAMERA FRAGMENT -->
    <!-- =============== -->
    <!-- Chips -->
    <string name="chip_recording">Recording</string>
    <string name="chip_inference">Inference: %1$s</string>
    <string name="inference_placeholder">Inference</string>
    <string name="chip_cv">CV enabled</string>
    <!-- Record Video Dialog -->
    <string name="action_delete">Delete video</string>
    <!-- Dynamic textview content. Used to explain why permission is required -->
    <string name="camera_permission_justification">
        Camera permissions are required to analyse live feed, or to record a video.\n\nConsider grant this app permissions to use camera if you want to use this functionality.
    </string>
    <!-- =============== -->

    <!-- ================= -->
    <!-- SETTINGS FRAGMENT -->
    <!-- ================= -->
    <!-- Camera Settings -->
    <string name="camera_settings_warning">Camera tab settings</string>
    <string name="camera_settings_camera">Choose the camera used</string>

    <string name="hint_camera_selection">Choose the camera to use</string>


    <!-- Computer Vision Settings -->
    <string name="cv_settings_model">Model</string>
    <string name="cv_settings_presence_threshold">Presence Threshold</string>
    <string name="cv_settings_tracking_threshold">Tracking Threshold</string>
    <string name="cv_settings_detection_threshold">Detection Threshold</string>
    <string name="cv_settings_muscles">Muscles</string>
    <string name="cv_settings_show_muscle_markers">Show muscle markers</string>
    <string name="cv_settings_show_muscle_engagement">Show muscle engagement</string>
    <string name="cv_settings_joints">Joints</string>
    <string name="cv_settings_show_stability_marker">Show stability marker</string>
    <string name="cv_settings_show_center_of_gravity">Show Center of Gravity</string>
    <string name="cv_settings_show_trail">Show trail</string>
    <string name="cv_settings_center_of_gravity">Center of Gravity</string>
    <string name="cv_settings_angles">Angles</string>

    <string name="cv_settings_warning">Markers displayed to provide analysis of your video</string>

    <!-- MediaPipe Settings -->
    <string name="mediapipe_settings_warning">Warning: These options may have a high impact on the analysis functionality.\nOnly fine tune these options if you know what you are doing!</string>
    <string name="mediapipe_settings_gpu_delegate">GPU</string>
    <string name="mediapipe_settings_cpu_delegate">CPU</string>

    <string name="hint_thresholds">Set the inference parameters</string>
    <string name="hint_model">Choose the model used to run the inference</string>
    <string name="hint_delegate">Choose the hardware used to run the inference</string>
    <string name="hint_overlay">Select the components to display on the overlay</string>
    <string name="hint_toggle_camera">Define the action when pressing the Camera button</string>
    <string name="hint_toggle_chips">Define which chips are visible, and how visible they are</string>


    <string-array name="models_spinner_titles">
        <item>Pose Landmarker Full</item>
        <item>Pose Landmarker Lite</item>
        <item>Pose Landmarker Heavy</item>
    </string-array>

    <string-array name="camera_spinner_titles">
        <item>Back Camera</item>
        <item>Front Camera</item>
    </string-array>
    <!-- ================= -->

    <!-- Unclassified -->
    <string name="select_file">Select video from storage</string>
    <string name="sp_use_online">Use online resource</string>
</resources>
