<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_camera">

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.iteration.climbingmuse.ui.home.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_navigation_camera_to_navigation_permissions"
            app:destination="@id/navigation_permissions" />
    </fragment>

    <fragment
        android:id="@+id/navigation_file_explorer"
        android:name="com.iteration.climbingmuse.ui.dashboard.DashboardFragment"
        android:label="@string/title_file_explorer"
        tools:layout="@layout/fragment_file_explorer" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.iteration.climbingmuse.ui.notifications.NotificationsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_permissions"
        android:name="com.iteration.climbingmuse.app.PermissionsFragment"
        android:label="Permissions">
        <action
            android:id="@+id/action_navigation_permissions_to_navigation_camera"
            app:destination="@id/navigation_camera" />
    </fragment>
</navigation>