<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.settings.ComputerVisionSettingsFragment">

    <data>
        <variable
            name="viewmodel"
            type="com.iteration.climbingmuse.ui.settings.SettingsViewModel"/>
        <import
            type="com.iteration.climbingmuse.ui.settings.SettingsViewModel.MaterialCheckBoxConverter"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cv_settings_warning"
            android:textSize="@dimen/medium_text"
            android:padding="@dimen/default_padding"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_padding">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/main_options_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/check_angle_decorator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={viewmodel.showAngles}"
                        android:text="@string/cv_settings_angles"
                        tools:checked="true"/>
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/check_gravity_center_decorator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cv_settings_center_of_gravity"
                        tools:checkedState="indeterminate"/>
                    <LinearLayout
                        android:id="@+id/cog_subchecks_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/subcheckbox_margin"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/check_gravity_center_trail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@={viewmodel.showCOGTrail}"
                            android:text="@string/cv_settings_show_trail"
                            tools:checked="true"/>

                        <CheckBox
                            android:id="@+id/check_gravity_center_marker"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@={viewmodel.showCOGMarker}"
                            android:text="@string/cv_settings_show_center_of_gravity"
                            tools:checked="false"/>

                        <CheckBox
                            android:id="@+id/check_stability_marker"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@={viewmodel.showBalanceMarker}"
                            android:text="@string/cv_settings_show_stability_marker"
                            tools:checked="false"/>
                    </LinearLayout>
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/check_joint_decorator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={viewmodel.showJointMarkers}"
                        android:text="@string/cv_settings_joints"
                        tools:checked="true"/>
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/check_muscle_decorator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/cv_settings_muscles"
                        tools:checkedState="checked"/>
                    <LinearLayout
                        android:id="@+id/muscles_subchecks_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/subcheckbox_margin"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/check_muscle_marker"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@={viewmodel.showMuscleMarkers}"
                            android:text="@string/cv_settings_show_muscle_markers"
                            tools:checked="true"/>

                        <CheckBox
                            android:id="@+id/check_muscle_engagement"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@={viewmodel.showMuscleEngagement}"
                            android:text="@string/cv_settings_show_muscle_engagement"
                            tools:checked="true"/>
                    </LinearLayout>
                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_padding"
                    android:layout_marginBottom="@dimen/big_padding"
                    app:dividerThickness="1dp"
                    app:dividerInsetStart="16dp"
                    app:dividerInsetEnd="16dp"/>

                <LinearLayout
                    android:id="@+id/container_detection_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cv_settings_detection_threshold"
                        android:layout_weight="1" />
                    <com.google.android.material.slider.Slider
                        android:id="@+id/slider_detection_threshold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:valueFrom="0.0"
                        android:valueTo="100.0"
                        android:layout_marginStart="8dp"
                        android:textAlignment="center"
                        android:layout_weight="5"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_tracking_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cv_settings_tracking_threshold"
                        android:layout_weight="1"/>
                    <com.google.android.material.slider.Slider
                        android:id="@+id/slider_tracking_threshold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:valueFrom="0.0"
                        android:valueTo="100.0"
                        android:layout_marginStart="8dp"
                        android:textAlignment="center"
                        android:layout_weight="5"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_presence_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cv_settings_presence_threshold"
                        android:layout_weight="1"/>
                    <com.google.android.material.slider.Slider
                        android:id="@+id/slider_presence_threshold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:valueFrom="0.0"
                        android:valueTo="100.0"
                        android:layout_marginStart="8dp"
                        android:textAlignment="center"
                        android:layout_weight="5"/>
                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_padding"
                    android:layout_marginBottom="@dimen/big_padding"
                    app:dividerThickness="1dp"
                    app:dividerInsetStart="16dp"
                    app:dividerInsetEnd="16dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:hint="@string/cv_settings_model">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/menu_model"
                        android:text="@={viewmodel.model}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
